--- a/less/layout.less
+++ b/less/layout.less
@@ -63,11 +63,14 @@ header.splash {
 	padding-top: 150px;
 	padding-bottom: 250px;
 	.row{
-	padding-bottom: 50px;
+	padding-bottom: 20px;
 	padding-top: 20px;
 	}
 	h4{
 	padding-bottom: 5px;
+	}
+	.artifact-screenshot img {
+	margin-top: 40px;
 	}
 }
 
